# MyQtTryouts

./: .gitignore  README.md
EchoServer/: CMakeLists.txt  EchoServer.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
ImageViewer/: CMakeLists.txt  main.h  mainwindow.h
ImageViewer/Src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  miracleviewer.cpp  miracleviewer.h
QGraphics/: CMakeLists.txt  README.md
QGraphics/Src/: mainwindow.cpp  mainwindow.h  mainwindow.ui  miraclegraphics.cpp  miraclegraphics.h
QGraphicsTest/: CMakeLists.txt
QGraphicsTest/Src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
QtConsole/: main.cpp
QtCustomControl/: CMakeLists.txt  README.md  main.cpp  startup.cpp  startup.h
QtCustomControl/View/: mainwindow.cpp  mainwindow.h  mainwindow.ui  renderarea.cpp  renderarea.h
QtLayouts/: CMakeLists.txt  ToDo.md  main.cpp  resource.qrc  settings.json  startup.cpp  startup.h  translations.qrc  utils.cpp  utils.h
QtLayouts/Model/: logger.cpp  logger.h  provider.cpp  provider.h  settings.cpp  settings.h  undoredo.cpp  undoredo.h
QtLayouts/VSProjects/: MiracleLayout.sln  MiracleLayout.vcxproj  MiracleLayout.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  translations.vcxproj  translations.vcxproj.filters
QtLayouts/VSProjects/MiracleLayout_autogen/: mocs_compilation.cpp
QtLayouts/View/: basewindow.cpp  basewindow.h  maintab.cpp  maintab.h  mainviewer.cpp  mainviewer.h  mainviewer.ui  mainviewer.ui.backup  mainwindow.cpp  mainwindow.h  mainwindow.ui  toolbar.cpp  toolbar.h
QtLayouts/ViewModel/: mainviewmanager.cpp  mainviewmanager.h
QtLayouts/images/: list.py
QtLayouts/languages/: en_US.ts  english.ts  tr_TR.ts  turkish.ts  türkçe.ts
QtLayouts/styles/darkblue/: darkblue.qss
QtQuick/: CMakeLists.txt  LICENSE  main.cpp  main.qml
Test/: Test.pro
Vfp/: CMakeLists.txt  Vfp.pro  main.cpp  settings.json  startup.cpp  startup.h  utils.cpp  utils.h  vfpresources.qrc
Vfp/Model/: controltab.cpp  controltab.h  instrument.cpp  instrument.h  instsocket.cpp  instsocket.h  insturment.cpp  insturment.h  provider.cpp  provider.h  settings.cpp  settings.h
Vfp/View/: CMakeLists.txt  mainview.cpp  mainview.h  mainview.ui  setuptab.cpp  setuptab.h  setuptab.ui
Vfp/ViewMng/: setupviewmanager.cpp  setupviewmanager.h  test.cpp  test.h
Vfp/styles/: darkorange.qss
WidgetList/: CMakeLists.txt  README.md  WidgetList.pro
WidgetList/Src/: CMakeLists.txt  colorbox.cpp  colorbox.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  thewidgetitem.cpp  thewidgetitem.h  thewidgetitem.ui
